# server/docs/swagger.yaml
@@ -36,6 +36,11 @@ definitions:
         example: CompSci
         type: string
     type: object
+  api.PayTokenJSON:
+    properties:
+      payToken:
+        type: string
+    type: object
   api.ShortEvent:
     properties:
       id:
@@ -280,7 +285,7 @@ paths:
       produces:
       - text/plain
       responses:
-        "201":
+        "200":
           description: Event edited with success
           schema:
             type: string
@@ -397,6 +402,59 @@ paths:
       summary: List the user's event
       tags:
       - Event
+  /event/pay:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Dummy endpoint for paying the fee for enrolling in a event
+      parameters:
+      - description: User's email
+        in: formData
+        name: email
+        required: true
+        type: string
+      - description: User's CSRF Token
+        in: header
+        name: X-CSRF-Token
+        required: true
+        type: string
+      - description: ID of the event
+        in: formData
+        name: eventID
+        required: true
+        type: string
+      - description: PayToken given during event enrollment
+        in: formData
+        name: PayToken
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: Event registration payed successfully
+          schema:
+            type: string
+        "401":
+          description: Invalid credentials
+          schema:
+            type: string
+        "404":
+          description: Registration not found
+          schema:
+            type: string
+        "409":
+          description: Registration has already been paid
+          schema:
+            type: string
+        "500":
+          description: Error found during event payment confirmation
+          schema:
+            type: string
+      summary: Pay event enrollment fee
+      tags:
+      - Event
+      - Dev
   /event/publish:
     post:
       consumes:
@@ -443,6 +501,54 @@ paths:
           schema:
             type: string
       summary: Publish event
+      tags:
+      - Event
+  /event/register:
+    post:
+      consumes:
+      - multipart/form-data
+      description: A user can enroll in a event, if said enrollment expects payment,
+        a payToken will be given.
+      parameters:
+      - description: User's email
+        in: formData
+        name: email
+        required: true
+        type: string
+      - description: User's CSRF Token
+        in: header
+        name: X-CSRF-Token
+        required: true
+        type: string
+      - description: ID of the event
+        in: formData
+        name: eventID
+        required: true
+        type: string
+      - description: Discount code
+        in: formData
+        name: discountCode
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.PayTokenJSON'
+        "401":
+          description: Invalid credentials
+          schema:
+            type: string
+        "404":
+          description: Event / Discount code not found
+          schema:
+            type: string
+        "500":
+          description: Error found during event enrollment
+          schema:
+            type: string
+      summary: Enroll in a event
       tags:
       - Event
   /event/view/:id:
